--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = wemosbat
 framework = arduino
 
 lib_deps = 
-    ESP32 BLE Arduino@1.0.1
+    ESP32 BLE Arduino
+    Adafruit NeoPixel
 
 ; Serial Monitor options
 monitor_speed = 115200
