--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "plantuml.diagramsRoot": "docs/diagrams/src",
-    "plantuml.exportOutDir": "docs/diagrams/out",
+    "plantuml.diagramsRoot": "doc/diagrams/src",
+    "plantuml.exportOutDir": "doc/diagrams/out",
     "plantuml.exportFormat": "png"
 }
