--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:wemosbat]
+[env:wemos_d1_mini32]
 platform = espressif32
-board = wemosbat
+board = wemos_d1_mini32
 framework = arduino
 
 lib_deps = 
