--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -42,5 +42,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} 
           asset_path: ./.pio/build/wemos_d1_mini32/firmware.bin
-          asset_name: ${{ github.ref }}-firmware.bin
+          asset_name: firmware.bin
           asset_content_type: application/octet-stream
